# spread

./: .gitignore  .projectile  LICENSE  Makefile  README.md  build.clj  deps.edn  package-lock.json  package.json  pom.xml  shadow-cljs.edn  start_all_components.sh  tests.edn
.circleci/: config.yml
.clj-kondo/: config.edn
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml
deployments/dev/: docker-compose.yml
deployments/prod/: README.org
docker-images/: README.md  deploy.sh
docker-images/clj/: Dockerfile
docker-images/cljs/: Dockerfile
docker-images/deploy/: Dockerfile
docs/: .dir-locals.el  236_subG_PT_cauchy_geo.mcc.tre  hldd.org  sdd.org  spread_data_example_minimal.json  viewer-animation-subsystem.dia
docs/data_examples/: continuous_parsed.json  discrete_parsed.json
docs/plans/: 2026-07-02-sendgrid-to-ses-migration-design.md
docs/wireframes/: wireframes.html  wireframes.org
env/: dev  prod
resources/: schema.edn
resources/continuous/: speciesDiffusion.MCC.tre
resources/maps/: maps-boxes.edn
resources/public/: index.html
resources/sql/: analysis.sql  bayes_factor.sql  continuous_tree.sql  custom_map.sql  discrete_tree.sql  error.sql  parser.sql  time_slicer.sql  timeslicer.sql  user.sql
services/analysis-viewer/: Dockerfile  X0X.html  build.sh  index.html  nginx.conf  serverless.yml  spread.com
services/api/: Dockerfile  build.sh  serverless.yml
services/autoscaling/: Cargo.toml
services/autoscaling/src/: backlog.rs  config.rs  main.rs  scaling.rs
services/db-migration/: pom.xml  serverless.yml
services/ui/: Dockerfile  (+3 more)
(+287 files in other folders)
