[package]
name = "autoscaling"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.3.0"
aws-sdk-cloudwatch = "0.3.0"
aws-sdk-sqs = "0.3.0"
aws-sdk-ecs = "0.3.0"
tokio = { version = "1", features = ["full"] }
anyhow = "^1.0"
# clap = {version = "3.0.0-beta.5", features = ["derive"]}
env_logger = "0.8"
log = "0.4"